[tool.poetry]
name = "py-temper-exporter"
version = "0.1.0"
description = ""
authors = ["Steven R. Loomis <srl295@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
temper-py = "^0.0.3"
prometheus-client = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
